--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
+    "native-base": "^2.7.1",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-router-flux": "^4.0.0-beta.31"
